5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1593_1806.log
== SUBMITION (2019-03-28 11:35:53) 
-- CODE:
from math import*
pr = float(input(" npc "))
pn = 1 - (factorial(365)/factorial(365 - pr) * (1/(**pr))
pro = pn * 100
print((round(pro,2))
-- EXECUTION TIME:
0.167501
-- ERROR:
  File "/home/codebench/codes/1593/1806/main.py", line 3
    pn = 1 - (factorial(365)/factorial(365 - pr) * (1/(**pr))
                                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:36:12) 
-- CODE:
from math import*
pr = float(input(" npc "))
pn = 1 - (factorial(365)/factorial(365 - pr) * (1/(365**pr))
pro = pn * 100
print((round(pro,2))
-- EXECUTION TIME:
0.168229
-- ERROR:
  File "/home/codebench/codes/1593/1806/main.py", line 4
    pro = pn * 100
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:36:34) 
-- CODE:
from math import*
pr = float(input(" npc "))
pn = 1 - (factorial(365)/factorial(365 - pr)) * (1/(365**pr))
pro = pn * 100
print((round(pro,2))
-- EXECUTION TIME:
0.146905
-- ERROR:
  File "/home/codebench/codes/1593/1806/main.py", line 6
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:36:57) 
-- CODE:
from math import*
pr = float(input(" npc "))
pn = 1 - (factorial(365)/factorial(365 - pr)) * (1/(365**pr))
pro = pn * 100
print((round(pro,2))
-- ERROR:
File "XXXX", line 6
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:37:08) 
-- CODE:
from math import*
pr = float(input(" npc "))
pn = 1 - (factorial(365)/factorial(365 - pr)) * (1/(365**pr))
pro = pn * 100
print(round(pro,2))
-- EXECUTION TIME:
0.168321
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
